--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@mui/x-data-grid": "^8.10.0",
     "@mui/x-date-pickers": "^8.10.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "apexcharts": "^5.3.3",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
+    "install": "^0.13.0",
     "lucide-react": "^0.344.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
