--- a/package.json
+++ b/package.json
@@ -17,11 +17,54 @@
     "@mui/x-data-grid": "^8.10.0",
     "@mui/x-date-pickers": "^8.10.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tiptap/core": "2.0.4",
+    "@tiptap/extension-blockquote": "2.0.4",
+    "@tiptap/extension-bold": "2.0.4",
+    "@tiptap/extension-bubble-menu": "2.0.4",
+    "@tiptap/extension-bullet-list": "2.0.4",
+    "@tiptap/extension-code": "2.0.4",
+    "@tiptap/extension-code-block": "2.0.4",
+    "@tiptap/extension-color": "2.0.4",
+    "@tiptap/extension-document": "2.0.4",
+    "@tiptap/extension-dropcursor": "2.0.4",
+    "@tiptap/extension-floating-menu": "2.0.4",
+    "@tiptap/extension-font-family": "2.0.4",
+    "@tiptap/extension-gapcursor": "2.0.4",
+    "@tiptap/extension-hard-break": "2.0.4",
+    "@tiptap/extension-heading": "2.0.4",
+    "@tiptap/extension-highlight": "2.0.4",
+    "@tiptap/extension-history": "2.0.4",
+    "@tiptap/extension-horizontal-rule": "2.0.4",
+    "@tiptap/extension-image": "2.0.4",
+    "@tiptap/extension-italic": "2.0.4",
+    "@tiptap/extension-link": "2.0.4",
+    "@tiptap/extension-list-item": "2.0.4",
+    "@tiptap/extension-mention": "2.0.4",
+    "@tiptap/extension-ordered-list": "2.0.4",
+    "@tiptap/extension-paragraph": "2.0.4",
+    "@tiptap/extension-placeholder": "2.0.4",
+    "@tiptap/extension-strike": "2.0.4",
+    "@tiptap/extension-subscript": "2.0.4",
+    "@tiptap/extension-superscript": "2.0.4",
+    "@tiptap/extension-table": "2.0.4",
+    "@tiptap/extension-table-cell": "2.0.4",
+    "@tiptap/extension-table-header": "2.0.4",
+    "@tiptap/extension-table-row": "2.0.4",
+    "@tiptap/extension-task-item": "2.0.4",
+    "@tiptap/extension-task-list": "2.0.4",
+    "@tiptap/extension-text": "2.0.4",
+    "@tiptap/extension-text-align": "2.0.4",
+    "@tiptap/extension-text-style": "2.0.4",
+    "@tiptap/extension-underline": "2.0.4",
+    "@tiptap/pm": "2.0.4",
+    "@tiptap/react": "2.0.4",
+    "@tiptap/suggestion": "2.0.4",
     "apexcharts": "^5.3.3",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "lucide-react": "^0.344.0",
+    "mui-tiptap": "^1.23.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
