--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,22 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: umubyeyi-elevate-dashboard
-    ports:
-      - "5173:80"
-    environment:
-      - VITE_API_URL=${VITE_API_URL}
+    dashboard_app:
+        build:
+            context: .
+            dockerfile: Dockerfile
+            container_name: umubyeyi-elevate-dashboard
+            ports:
+                - "5173:8080"
+            environment:
+                - VITE_API_URL=${VITE_API_URL}
+            networks:
+                - umubyeyi_shared_network
     # If you need to connect to a backend service on the host machine (development)
     # extra_hosts:
     #  - "host.docker.internal:host-gateway"
+
+networks:
+    umubyeyi_shared_network:
+        external: true
+
