--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port 3000",
-    "start": "vite preview --port 3000 --host"
+    "preview": "vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
